--- a/package.json
+++ b/package.json
@@ -1,57 +1,39 @@
 {
-  "name": "js-framework-benchmark",
+  "name": "js-framework-benchmark-non-keyed-inferno",
   "version": "1.0.0",
-  "description": "Simple Benchmark for Javascript client side rendering",
-  "type": "module",
+  "description": "Benchmark for inferno framework",
+  "js-framework-benchmark": {
+    "frameworkVersionFromPackage": "inferno",
+    "frameworkHomeURL": "https://github.com/infernojs/inferno"
+  },
   "scripts": {
-    "clean": "node cleanup.js",
-    "build": "node rebuild-all.js --ci",
-    "build-prod": "node rebuild-all.js --ci",
-    "compile": "node rebuild-all.js --ci",
-    "start": "cd server && node index.js",
-    "bench": "cd webdriver-ts && cross-env LANG=\"en_US.UTF-8\" node dist/benchmarkRunner.js",
-    "checkCSP": "cd webdriver-ts && cross-env LANG=\"en_US.UTF-8\" node dist/isCSPCompliant.js",
-    "results": "cd webdriver-ts && npm run results",
-    "bench-all": "cd webdriver-ts && npm run bench && npm run results",
-    "compile-webdriver-ts": "cd webdriver-ts && npm run compile",
-    "postinstall": "cd server && npm install",
-    "install-webdriver-ts": "cd webdriver-ts && npm ci && npm run compile",
-    "install-server": "cd server && npm ci",
-    "install-webdriver-ts-results": "cd webdriver-ts-results && npm ci",
-    "install-local": "npm run install-webdriver-ts && npm run install-webdriver-ts-results && npm run install-server",
-    "rebuild": "node rebuild-single.js",
-    "rebuild-ci": "node rebuild-single.js --ci",
-    "zip": "node cli.js zip",
-    "format": "prettier . \"!(broken-frameworks|frameworks)/**/*\" -w",
-    "lint": "eslint . --ignore-pattern \"/broken-frameworks/\" --ignore-pattern \"/frameworks/\""
+    "build-dev": "rollup -c",
+    "build-prod": "rollup -c --environment production"
   },
   "keywords": [
-    "benchmark",
-    "javascript",
-    "frontend",
-    "client",
-    "react",
-    "angular",
-    "mithril"
+    "ractive"
   ],
+  "type": "module",
+  "author": "Stefan Krause",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/krausest/js-framework-benchmark",
   "repository": {
     "type": "git",
     "url": "https://github.com/krausest/js-framework-benchmark.git"
   },
-  "author": "Stefan Krause",
-  "license": "ISC",
-  "homepage": "https://github.com/krausest/js-framework-benchmark",
-  "dependencies": {
-    "adm-zip": "^0.5.10",
-    "commander": "^11.0.0",
-    "cross-env": "^7.0.3",
-    "json5": "^2.2.3",
-    "rimraf": "^5.0.5",
-    "yargs": "^17.7.2"
-  },
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "local-web-server": "^5.3.0",
-    "prettier": "^3.0.3"
+    "@babel/core": "7.22.9",
+    "@babel/preset-env": "7.22.9",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-terser": "^0.4.3",
+    "babel-plugin-inferno": "6.6.0",
+    "rollup": "3.26.3",
+    "rollup-plugin-commonjs": "10.0.1",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-replace": "2.2.0"
+  },
+  "dependencies": {
+    "inferno": "8.2.2"
   }
 }
